# cfa-config-validation

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn_config.py  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
app/: app.py
azure_utils/: auth.py  storage.py
tests/: test_server.py
validation-api/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
validation-api/api/: app.py  local_schema.json  utils.py
validation-api/azure_utils/: auth.py  storage.py
validation-api/tests/: test_server.py
validation-api/tests/data/: invalid_config.json  valid_config.json
