[tool.poetry]
name = "validation-api"
version = "0.1.0"
description = ""
authors = ["amondal2 <ab59@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "validation-api"
